Fix scaling history pagination handling
Pagination was implemented incorrectly in the API server.

Now it is implemented in the Scaling Engine using the obvious DB
features. Additionally the scaling history handler has been replaced
with an OpenAPI spec-based ogen-generated implementation.
